--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,6 @@
         <script src="./index.js"></script>
     </head>
     <body>
-        <h1>CALL THIS PAGE WITH A POST REQUEST WITH THE CORRESPONDANT DATA AND BRANCH NAME AND IT WILL RETURN THE CORRESPONDANT DATA</h1>
+        <text>CALL THIS PAGE WITH A POST REQUEST WITH THE CORRESPONDANT DATA AND BRANCH NAME AND IT WILL RETURN THE CORRESPONDANT DATA</text>
     </body>
 </html>
